<resources>
    <string name="app_name">Jamf Buddy</string>
    <string name="recordName">Record Name</string>
    <string name="recordId">Record ID</string>
    <string name="recordIconDesc">Record Model Desc</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="port">8443</string>
    <string name="rememberMe">Remember me</string>
    <string name="title_activity_device_list">Main Directory</string>
    <string name="computer_tab">Computers</string>
    <string name="mobile_tab">Mobile Devices</string>
    <string name="user_tab">Users</string>
    <string name="refresh_option">Refresh</string>
    <string name="recordNameLabel">Record Name</string>
    <string name="recordIdLabel">Record ID</string>
    <string name="offlineModeTitle">Use offline mode?</string>
    <string name="offlineModeBody">You have locally cached data. Would you like to use offline mode and load the cached records?</string>
    <string name="offlineModeOk">Yes</string>
    <string name="offlineModeNo">No</string>
</resources>
