<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="net.manicmachine.csather.jamfbuddy.ComputerFragment">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/recordWrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/recordIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/recordIconDesc"
            android:scaleType="centerInside"
            android:src="@mipmap/macbook"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/recordNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:text="@string/recordNameLabel"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/recordIcon"
            app:layout_constraintTop_toTopOf="@+id/recordIcon" />

        <TextView
            android:id="@+id/recordName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/recordName"
            app:layout_constraintStart_toEndOf="@id/recordIcon"
            app:layout_constraintTop_toBottomOf="@id/recordNameLabel" />

        <TextView
            android:id="@+id/recordIdLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="8dp"
            android:text="@string/recordIdLabel"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/recordNameLabel" />

        <TextView
            android:id="@+id/recordId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/recordId"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recordIdLabel" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>
